[package]
name = "aarch64"
version = "4.0.0"
authors = [
        "Andre Richter <andre.o.richter@gmail.com>",
        "koumingyang <1761674434@qq.com>",
        "Yuekai Jia <equation618@gmail.com>",
        "Richard Chien <stdrc@outlook.com>",
]
description = "Low level access to Cortex-A processors"
homepage = "https://github.com/tangramos/aarch64"
repository = "https://github.com/tangramos/aarch64"
readme = "README.md"
keywords = ["arm", "aarch64", "cortex-a", "register", "paging"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT/Apache-2.0"
edition = "2018"
exclude = ["Makefile"]

[dependencies]
tock-registers = { version = "0.7.x", default-features = false }
cortex-a = "7.2.0"
bit_field = "0.10.1"
bitflags = "1.3.2"
cast = { version = "0.3.0", default-features = false }
ux = { version = "0.1.4", default-features = false }
